pkg/cap/msg/errors/handle/example/example.i18n.go
// generated by cap from example.toml at 2020-02-05 16:31:12.5653618 +0800 CST m=+0.016000501, DO NOT EDIT.
package main

import "golang.org/x/text/language"

func init() {
	initTrRegistry()
	example_lr.addTranslation(ERR_INTERNAL_1, language.Make("zh-CN"), "内部错误1")
	example_lr.addTranslation(ERR_INTERNAL_2, language.Make("zh-CN"), "内部错误2[%v]")
}
